fix(header)
fix header, moved extra margin and added aspect-ratio: 16/10;

--- a/Wireframe/style.css
+++ b/Wireframe/style.css
@@ -27,10 +27,11 @@ As well as useful links to learn more */
 /* ====== Base Elements ======
  General rules for basic HTML elements in any context */
 header {
-   text-align: center;
-   position: fixed;
-   width: 100%;
+  text-align: center;
+  position: fixed;
+  width: 100%;
   background-color: var(--paper);
+  top: 0;
 
  }
 body {
@@ -48,7 +49,9 @@ img,
 svg {
   width: 100%;
   object-fit: cover;
-  height: 50vh;
+  aspect-ratio: 16/10;
+
+
 }
 h1 {
   font-size: 2rem;
